--- a/index.html
+++ b/index.html
@@ -4,121 +4,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Romix - Colección Invierno 2025</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-SnMh5Zq9wTW8QLm2k7w3z2wQz0s0nKxHq4xFf9m4V3LQ8v7V4n9H2m3Wn7g0qUQy9VwQ1p4f8U8tH1hJ0nqQwQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-b7ZPnUPQK1G3z2d4l0f7Gm2M1eJp4z8f5s1p9o3r2x6z0kYd8l9r4Qv5B1c2D3E4F5G6H7I8J9K0L1M2N3O4PQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
     :root {
-      --primary: #e83e8c; --secondary: #6f42c1; --light: #f8f9fa; --dark: #343a40;
-      --success: #28a745; --danger: #dc3545; --warning: #ffc107;
-      --radius: 10px;
+      --primary: #e83e8c;
+      --secondary: #6f42c1;
+      --light: #f8f9fa;
+      --dark: #343a40;
+      --success: #28a745;
+      --danger: #dc3545;
+      --warning: #ffc107;
     }
+
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
     body { background-color: #f5f5f5; color: #333; }
-    header { background: linear-gradient(135deg, var(--primary), var(--secondary)); color: #fff; padding: 20px 0; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,.1); }
+
+    header { background: linear-gradient(135deg, var(--primary), var(--secondary)); color: white; padding: 20px 0; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,.1); }
     .header-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; display: flex; justify-content: space-between; align-items: center; }
-    .logo { font-size: 2rem; font-weight: 700; display: flex; align-items: center; gap: 10px; }
-    .contact-header { display: flex; align-items: center; gap: 10px; }
-    .whatsapp-header { background-color: #25D366; color: #fff; padding: 8px 15px; border-radius: 20px; text-decoration: none; display: inline-flex; align-items: center; font-weight: 700; gap: 6px; }
-    .cart-icon-btn { position: relative; display: inline-flex; align-items: center; justify-content: center; gap: 6px; padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(255,255,255,.4); background: rgba(0,0,0,.1); color: #fff; cursor: pointer; }
-    .cart-icon-btn:focus-visible { outline: 3px solid #fff; outline-offset: 2px; }
-    #cart-count { background: var(--danger); color: #fff; border-radius: 999px; padding: 0 6px; font-size: .8rem; position: absolute; top: -8px; right: -8px; min-width: 18px; text-align: center; }
+    .logo { font-size: 2rem; font-weight: bold; display: flex; align-items: center; }
+    .logo i { margin-right: 10px; }
 
-    nav { background: #fff; position: sticky; top: 72px; z-index: 999; box-shadow: 0 2px 5px rgba(0,0,0,.1); }
-    .nav-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
-    .nav-menu { display: flex; list-style: none; overflow-x: auto; white-space: nowrap; }
-    .nav-menu li a { display: block; padding: 15px 20px; color: var(--dark); text-decoration: none; font-weight: 600; transition: .3s; }
-    .nav-menu li a:hover, .nav-menu li.active a { color: var(--primary); }
+    .contact-header { display: flex; align-items: center; }
+    .whatsapp-header { background-color: #25D366; color: white; padding: 8px 15px; border-radius: 20px; text-decoration: none; display: flex; align-items: center; font-weight: bold; margin-left: 15px; }
+    .whatsapp-header i { margin-right: 5px; }
 
-    .container { max-width: 1200px; margin: 30px auto; padding: 0 20px; }
-    .section-title { font-size: 1.8rem; color: var(--secondary); margin-bottom: 20px; padding-bottom: 10px; border-bottom: 2px solid #eee; display: flex; align-items: center; gap: 10px; }
+    .cart-icon { cursor: pointer; display: flex; align-items: center; font-size: 1.2rem; margin-left: 15px; position: relative; }
+    .cart-icon #cart-count { background-color: var(--danger); color: white; border-radius: 50%; padding: 2px 6px; font-size: 0.8rem; position: absolute; top: -10px; right: -10px; }
 
-    .products-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
-    .product-card { background: #fff; border-radius: var(--radius); overflow: hidden; box-shadow: 0 3px 10px rgba(0,0,0,.1); transition: transform .3s, box-shadow .3s; position: relative; }
-    .product-card:hover { transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0,0,0,.15); }
-    .product-image { height: 200px; background: #f8f9fa; display: flex; align-items: center; justify-content: center; position: relative; }
-    .product-image img { max-width: 80%; max-height: 80%; object-fit: contain; }
-    .product-badge { position: absolute; top: 10px; right: 10px; background: var(--primary); color: #fff; padding: 5px 10px; border-radius: 20px; font-size: .8rem; font-weight: 700; }
-    .product-info { padding: 15px; }
-    .product-title { font-size: 1.1rem; font-weight: 700; margin-bottom: 10px; color: var(--dark); height: 50px; overflow: hidden; }
-    .product-price { font-size: 1.3rem; font-weight: 700; color: var(--primary); margin-bottom: 10px; }
-    .product-price small { font-size: .9rem; color: #6c757d; text-decoration: line-through; margin-left: 5px; }
+    .size-option.available { background-color: var(--success); color: white; border-color: var(--success); }
+    .size-option.low-stock { background-color: var(--warning); color: var(--dark); border-color: var(--warning); }
+    .size-option.unavailable { background-color: transparent; border: 2px dashed #ccc; color: #6c757d; text-decoration: line-through; cursor: not-allowed; }
 
-    .product-colors, .size-options { display: flex; flex-wrap: wrap; gap: 6px; }
-    .color-option { width: 22px; height: 22px; border-radius: 50%; border: 1px solid #ddd; cursor: pointer; outline: none; }
-    .color-option.selected { box-shadow: 0 0 0 2px var(--primary); }
-    .size-option { padding: 5px 10px; border: 1px solid #ddd; border-radius: 6px; font-size: .85rem; cursor: pointer; }
-    .size-option:hover { border-color: var(--primary); }
-    .size-option.selected { border: 2px solid var(--primary); }
-    .size-option.unavailable { background: #f8f9fa; color: #6c757d; text-decoration: line-through; cursor: not-allowed; }
-
-    .quantity-control { display: flex; align-items: center; gap: 6px; margin: 10px 0; }
-    .quantity-title { font-size: .9rem; color: #6c757d; }
-    .quantity-btn { padding: 6px 10px; font-size: .9rem; cursor: pointer; border: 1px solid #ddd; background: #fff; border-radius: 6px; }
-    .quantity-input { width: 56px; padding: 6px; border: 1px solid #ddd; border-radius: 6px; text-align: center; }
-
-    .product-actions { display: flex; gap: 10px; }
-    .btn { padding: 8px 15px; border-radius: 8px; border: none; font-weight: 700; cursor: pointer; display: inline-flex; align-items: center; gap: 6px; }
-    .btn-primary { background: var(--primary); color: #fff; }
-    .btn-outline { background: transparent; border: 1px solid var(--primary); color: var(--primary); }
-    .btn-success { background: var(--success); color: #fff; }
-    .btn-danger { background: var(--danger); color: #fff; }
-
-    .contact-section, .cart-section { background: #fff; border-radius: var(--radius); padding: 30px; margin-top: 40px; box-shadow: 0 3px 10px rgba(0,0,0,.1); }
-    .cart-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    .cart-table th, .cart-table td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
-    .cart-table th { background: var(--light); font-weight: 700; color: var(--secondary); }
-    .cart-total { margin-top: 20px; font-size: 1.3rem; font-weight: 700; text-align: right; color: var(--primary); }
-    .cart-actions { margin-top: 20px; display: flex; justify-content: flex-end; gap: 10px; }
-
-    .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); z-index: 2000; align-items: center; justify-content: center; }
-    .modal-content { background: #fff; padding: 20px; border-radius: var(--radius); width: 95%; max-width: 520px; box-shadow: 0 5px 15px rgba(0,0,0,.3); }
-    .modal-content h3 { margin-bottom: 15px; color: var(--secondary); }
-    .modal-row { display: grid; grid-template-columns: 120px 1fr; gap: 15px; align-items: start; }
-    .modal-thumb { width: 120px; height: 120px; background: #f8f9fa; border-radius: 8px; display: flex; align-items: center; justify-content: center; overflow: hidden; }
-    .summary { background: #fafafa; border: 1px solid #eee; border-radius: 8px; padding: 12px; margin-top: 10px; font-size: .95rem; }
-    .price-line { display: flex; justify-content: space-between; margin-top: 8px; }
-    .modal-content label { display: block; margin: 12px 0 6px; font-weight: 700; }
-    .modal-content select, .modal-content input { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 6px; }
-    .modal-actions { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 15px; }
-    .hidden { display: none; }
-
-    footer { background: var(--dark); color: #fff; padding: 30px 0; margin-top: 50px; }
-    .footer-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; display: grid; grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); gap: 30px; }
-    .footer-column h4 { font-size: 1.2rem; margin-bottom: 15px; color: var(--primary); }
-    .footer-column ul { list-style: none; }
-    .footer-column ul li { margin-bottom: 10px; }
-    .footer-column ul li a { color: #adb5bd; text-decoration: none; transition: color .3s; }
-    .footer-column ul li a:hover { color: #fff; }
-    .social-links { display: flex; gap: 15px; margin-top: 15px; }
-    .social-links a { color: #fff; background: #495057; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: background-color .3s; }
-    .social-links a:hover { background: var(--primary); }
-    .copyright { text-align: center; padding-top: 20px; margin-top: 20px; border-top: 1px solid #495057; color: #adb5bd; font-size: .9rem; }
-
-    @media (max-width:768px) {
-      .header-container { flex-direction: column; text-align: center; gap: 10px; }
-      .products-grid { grid-template-columns: repeat(auto-fill, minmax(240px, 1fr)); }
-      .cart-table { font-size: .85rem; }
-      .modal-row { grid-template-columns: 1fr; }
-      .modal-thumb { width: 100%; height: 180px; }
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-      * { animation-duration: 0.001ms !important; animation-iteration-count: 1 !important; transition-duration: 0.001ms !important; }
-    }
+    .color-option.unavailable { background: repeating-conic-gradient(#ccc 0% 25%, transparent 0% 50%) 50% / 10px 10px; border: 1px solid #ddd; cursor: not-allowed; }
   </style>
 </head>
 <body>
-  <a class="skip-link" href="#mujer" style="position:absolute;left:-9999px;top:auto;">Saltar al contenido</a>
   <header>
     <div class="header-container">
-      <div class="logo" aria-label="Romix"><i class="fas fa-tshirt" aria-hidden="true"></i><span>ROMIX</span></div>
+      <div class="logo"><i class="fas fa-tshirt"></i><span>👕 ROMIX</span></div>
       <div class="contact-header">
-        <a href="https://wa.me/5491154272065" class="whatsapp-header" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp Romix"><i class="fab fa-whatsapp" aria-hidden="true"></i> +54 9 11 5427-2065</a>
-        <button type="button" class="cart-icon-btn" onclick="toggleCart()" aria-haspopup="region" aria-controls="cart" aria-expanded="false">
-          <i class="fas fa-shopping-cart" aria-hidden="true"></i>
-          <span>Carrito</span>
-          <span id="cart-count" aria-live="polite">0</span>
-        </button>
+        <a href="https://wa.me/5491154272065" class="whatsapp-header"><i class="fab fa-whatsapp"></i> +54 9 11 5427-2065</a>
+        <div class="cart-icon" onclick="toggleCart()"><i class="fas fa-shopping-cart"></i> 🛒<span id="cart-count">0</span></div>
       </div>
     </div>
   </header>
