--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     .nav-container { max-width: 1200px; margin: 0 auto; padding: 0 20px; }
     .nav-menu { display: flex; list-style: none; overflow-x: auto; white-space: nowrap; }
     .nav-menu li a { display: block; padding: 15px 20px; color: var(--dark); text-decoration: none; font-weight: 600; transition: .3s; }
+    .nav-menu li a i { margin-right: 6px; }
     .nav-menu li a:hover, .nav-menu li.active a { color: var(--primary); }
+    .nav-menu li.active a { border-bottom: 3px solid var(--primary); }
 
     .container { max-width: 1200px; margin: 30px auto; padding: 0 20px; }
     .section-title { font-size: 1.8rem; color: var(--secondary); margin-bottom: 20px; padding-bottom: 10px; border-bottom: 2px solid #eee; display: flex; align-items: center; gap: 10px; }
